When direction is not normal (bottom to top, especially), we don't properly account for resizing of child boxes if it happens during Layout().  Bug 126620, r+sr=dbaron